--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,27 @@ android {
         versionName "1.0"
         minSdkVersion 30
         targetSdkVersion 33
+    }
 
+    signingConfigs {
+        config_debug {
+            keyAlias 'key-dev'
+            keyPassword 'Qwerty1234'
+            storeFile file("../keys/dev-keys.jks")
+            storePassword 'Qwerty1234'
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config_debug
+        }
+        debug {
+            debuggable true
+            minifyEnabled false
+            signingConfig signingConfigs.config_debug
         }
     }
     buildFeatures {
@@ -74,6 +88,14 @@ dependencies {
     implementation "androidx.wear.compose:compose-navigation:1.1.2"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    def coilVersion = "2.4.0"
+    implementation "io.coil-kt:coil:$coilVersion"
+    implementation "io.coil-kt:coil-compose:$coilVersion"
+    implementation "io.coil-kt:coil-gif:$coilVersion"
+    implementation "io.coil-kt:coil-svg:$coilVersion"
+    implementation "io.coil-kt:coil-video:$coilVersion"
+    implementation "io.coil-kt:coil-test:$coilVersion"
 
     implementation "com.google.code.gson:gson:$gson_version"
 
