--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,18 +5,18 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     namespace 'dev.dizyaa.dizgram'
 
     defaultConfig {
         applicationId "dev.dizyaa.dizgram"
         minSdk 30
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         minSdkVersion 30
-        targetSdkVersion 33
+        targetSdkVersion 34
     }
 
     signingConfigs {
@@ -77,7 +77,8 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-core'
     implementation 'androidx.compose.material:material-icons-extended'
 
-    implementation "androidx.wear.compose:compose-material:1.1.2"
+    implementation "androidx.wear.compose:compose-material:1.2.0"
+    implementation "androidx.wear.compose:compose-foundation:1.2.0"
     implementation 'androidx.wear:wear-input:1.2.0-alpha02'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
@@ -85,7 +86,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    implementation "androidx.wear.compose:compose-navigation:1.1.2"
+    implementation "androidx.wear.compose:compose-navigation:1.2.0"
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
