Add support show voice message (without play) - add voice card ui - update AGP

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,6 @@ dependencies {
     implementation "io.insert-koin:koin-core:3.4.2"
     implementation "io.insert-koin:koin-android:3.4.2"
     implementation "io.insert-koin:koin-androidx-compose:3.4.5"
+
+    implementation 'com.github.lincollincol:compose-audiowaveform:1.1.1'
 }
